@@ -5,6 +5,7 @@ import dev.rosewood.rosegarden.command.framework.ArgumentHandler;
 import dev.rosewood.rosegarden.command.framework.CommandContext;
 import dev.rosewood.rosegarden.command.framework.InputIterator;
 import dev.rosewood.rosegarden.utils.StringPlaceholders;
+import java.util.Collections;
 import java.util.List;
 
 public class CharacterArgumentHandler extends ArgumentHandler<Character> {
@@ -14,7 +15,7 @@ public class CharacterArgumentHandler extends ArgumentHandler<Character> {
     }
 
     @Override
-    public Character handle(CommandContext context, Argument argument, InputIterator inputIterator) {
+    public Character handle(CommandContext context, Argument argument, InputIterator inputIterator) throws HandledArgumentException {
         String input = inputIterator.next();
         if (input.length() != 1)
             throw new HandledArgumentException("argument-handler-character", StringPlaceholders.of("input", input));
@@ -23,7 +24,7 @@ public class CharacterArgumentHandler extends ArgumentHandler<Character> {
 
     @Override
     public List<String> suggest(CommandContext context, Argument argument, String[] args) {
-        return List.of(argument.parameter());
+        return Collections.singletonList(argument.parameter());
     }
 
 }
