@@ -19,7 +19,7 @@ public class OfflinePlayerArgumentHandler extends ArgumentHandler<OfflinePlayer>
     }
 
     @Override
-    public OfflinePlayer handle(CommandContext context, Argument argument, InputIterator inputIterator) {
+    public OfflinePlayer handle(CommandContext context, Argument argument, InputIterator inputIterator) throws HandledArgumentException {
         String input = inputIterator.next();
         OfflinePlayer offlinePlayer;
         if (NMSUtil.isPaper()) {
@@ -38,7 +38,7 @@ public class OfflinePlayerArgumentHandler extends ArgumentHandler<OfflinePlayer>
     public List<String> suggest(CommandContext context, Argument argument, String[] args) {
         return Bukkit.getOnlinePlayers().stream()
                 .map(Player::getName)
-                .toList();
+                .collect(Collectors.toList());
     }
 
 }
