@@ -1,13 +1,41 @@
 package dev.rosewood.rosegarden.command.framework;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
-public record CommandInfo(String name,
-                          List<String> aliases,
-                          String permission,
-                          boolean playerOnly
-) {
+public class CommandInfo {
+
+    public final String name;
+    public final List<String> aliases;
+    public final String permission;
+    public final boolean playerOnly;
+
+    public CommandInfo(String name,
+                       List<String> aliases,
+                       String permission,
+                       boolean playerOnly) {
+        this.name = name;
+        this.aliases = aliases;
+        this.permission = permission;
+        this.playerOnly = playerOnly;
+    }
+
+    public String name() {
+        return this.name;
+    }
+
+    public List<String> aliases() {
+        return this.aliases;
+    }
+
+    public String permission() {
+        return this.permission;
+    }
+
+    public boolean playerOnly() {
+        return this.playerOnly;
+    }
 
     public static Builder builder(String name) {
         return new Builder(name);
@@ -22,7 +50,7 @@ public record CommandInfo(String name,
 
         private Builder(String name) {
             this.name = name;
-            this.aliases = List.of();
+            this.aliases = Collections.emptyList();
             this.permission = null;
             this.playerOnly = false;
         }
